[gd_scene load_steps=4 format=3 uid="uid://db2kox2r462sm"]

[ext_resource type="PackedScene" uid="uid://cdl2c78ntdfc8" path="res://Planets/Wormhole/Wormhole.tscn" id="1_4rlku"]
[ext_resource type="Script" path="res://WormholePair.gd" id="1_bjyp3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ak03"]
radius = 36.0555

[node name="WormholePair" type="Node2D"]
script = ExtResource("1_bjyp3")

[node name="Wormhole" parent="." instance=ExtResource("1_4rlku")]
position = Vector2(-242, -5)

[node name="Area2D" type="Area2D" parent="Wormhole"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wormhole/Area2D"]
shape = SubResource("CircleShape2D_7ak03")

[node name="Wormhole2" parent="." instance=ExtResource("1_4rlku")]
position = Vector2(241, 6)

[node name="Area2D2" type="Area2D" parent="Wormhole2"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wormhole2/Area2D2"]
shape = SubResource("CircleShape2D_7ak03")

[connection signal="body_entered" from="Wormhole/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Wormhole/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Wormhole2/Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Wormhole2/Area2D2" to="." method="_on_area_2d_2_body_exited"]
